[package]
name = "vjoy-sys"
version = "0.5.2"
edition = "2024"
authors = ["Maximillian Pfeil <pfeil.maximillian@gmail.com>"]
description = "Rust bindings to vJoy - a virtual input device driver for Windows"
repository = "https://github.com/ArrowMaxGithub/vjoy-sys"
license = "MIT OR Apache-2.0"
keywords = ["input", "virtual", "joystick", "vjoy", "gamepad"]
categories = ["external-ffi-bindings", "emulators", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"
windows-sys = "0.61.2"

[build-dependencies]
bindgen = "0.72.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
